--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -5,7 +5,7 @@ on: [push]
 
 jobs:
   if-Windows-else:
-    runs-on: macos-latest
+    runs-on: windows-2022
     steps:
     - name: condition 1 is Window os
       if: runner.os == 'Windows'
